# wawwd

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose-test.yml  docker-compose.yml
.docker/postgres/: Dockerfile
.docker/wawwd/: Dockerfile
application/: Cargo.toml
application/src/: error.rs  impls.rs  lib.rs  services.rs  transfer.rs
application/src/impls/: image.rs  instance.rs  location.rs  ring.rs
application/src/services/: image.rs  instance.rs  internal.rs  location.rs  ring.rs
application/src/services/internal/: instance.rs
application/src/transfer/: image.rs  location.rs  ring.rs
application/tests/: program.rs  ring.rs
driver/: Cargo.toml
driver/src/: database.rs  error.rs  init.rs  lib.rs  security.rs  volatile.rs
driver/src/database/: images.rs  instance.rs  location.rs  rings.rs
driver/src/security/: authorize.rs
driver/src/service/: images.rs
driver/src/volatile/: location.rs
kernel/: Cargo.toml
kernel/src/: entities.rs  error.rs  finder.rs  lib.rs  repository.rs  volatiles.rs
kernel/src/entities/: geology.rs  image.rs  instance.rs  location.rs  ring.rs  token.rs  volatiles.rs
kernel/src/entities/geology/: latitude.rs  longitude.rs  position.rs  radius.rs
kernel/src/entities/image/: binary.rs  metadata.rs  trait_tag.rs
kernel/src/entities/instance/: finished_at.rs  instance_id.rs  laps.rs  ring_set.rs  started_at.rs
kernel/src/entities/location/: localize.rs  localize_id.rs  localized_name.rs  location_id.rs
kernel/src/entities/ring/: created_at.rs  hue.rs  index.rs  ring_id.rs  user_addr.rs  user_id.rs
kernel/src/entities/token/: admin.rs
kernel/src/entities/volatiles/: etag.rs
kernel/src/finder/: ring.rs
kernel/src/repository/: image.rs  instance.rs  location.rs  ring.rs
kernel/src/security/: authorize.rs
kernel/src/service/: image.rs
kernel/src/volatiles/: locations.rs
migrations/: 20230909032104_init.sql  20231026012641_image.sql  20231030002909_user_ip_to_uuid.sql  20231103022522_redesign-ring.sql  20231103022525_redesign-instance.sql
server/: Cargo.toml
server/src/: controller.rs  error.rs  extensions.rs  extract.rs  handler.rs  lib.rs  main.rs  middleware.rs  routes.rs
server/src/controller/: locations.rs  rings.rs
server/src/controller/images/: create.rs
server/src/controller/locations/: create.rs  delete.rs  update.rs
server/src/controller/rings/: create.rs  read.rs
server/src/extensions/: geojson.rs
server/src/extract/: geojson.rs
server/src/middleware/: authorize.rs
server/src/routes/: images.rs  location.rs  locations.rs  rings.rs  socket.rs
server/src/routes/rings/: query.rs
server/src/routes/socket/: ws_rings.rs
server/src/routes/socket/ws_rings/: internal.rs  query.rs
