[package]
name = "application"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
publish = false

[[test]]
name = "tests"
path = "tests/program.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
orbital = "0.1"

thiserror = { workspace = true }
anyhow =  { workspace = true }

kernel = { path = "../kernel", features = ["ext", "mock"] }

[dev-dependencies]
trybuild = "1"
tokio = { version = "1", features = ["full"] }