[package]
name = "driver"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["uuid", "time", "postgres", "runtime-tokio-native-tls"] }
once_cell = "1"
merge-opt = "0.1.0"
try-ref = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
geo = "0.26"
geozero = { version = "0.11", features = ["with-postgis-sqlx"]}
geo-types = "0.7"


thiserror = { workspace = true }
anyhow =  { workspace = true }

tracing = "0.1"

application = { path = "../application" }
kernel = { path = "../kernel" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
