[package]
name = "driver"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["uuid", "time", "ipnetwork", "postgres", "runtime-tokio-native-tls"] }
futures = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
geozero = { version = "0.11", features = ["with-postgis-sqlx"]}
geo-types = "0.7"
rust-s3 = { version = "0.33", features = ["tokio", "tokio-native-tls"] }
thiserror = { workspace = true }
anyhow =  { workspace = true }

tracing = "0.1"

kernel = { path = "../kernel", features = ["ext"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
