[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
destructure = "0.1.2"
async-trait = "0.1"
uuid = { version = "1.4", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
geojson = "0.24"
geo-types = "0.7"
orbital = "0.1"

thiserror = { workspace = true }
anyhow =  { workspace = true }

[features]
uuid = []
time = []
ext  = ["uuid", "time"]