[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["multipart", "query", "headers", "ws"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = { workspace = true }
anyhow =  { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
geojson = "0.24"
mime = "0.3"
bytes = "1"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "env-filter"] }

kernel = { path = "../kernel" }
driver = { path = "../driver" }
application = { path = "../application" }
